build_error_final.txt
    Checking twister v0.5.0 (C:\Users\pixel\Downloads\twister)
error[E0425]: cannot find function `rt_store_async` in module `crate::dispatch`
   --> src\dispatch\signal_dispatch.rs:396:38
    |
396 |                     crate::dispatch::rt_store_async(
    |                                      ^^^^^^^^^^^^^^ not found in `crate::dispatch`

warning: unused import: `serde_json::Value`
 --> src\ai\query_tools.rs:3:5
  |
3 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary parentheses around method argument
  --> src\ai\query_tools.rs:55:13
   |
55 |             (target_azimuth * std::f64::consts::PI / 180.0),
   |             ^                                             ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
55 -             (target_azimuth * std::f64::consts::PI / 180.0),
55 +             target_azimuth * std::f64::consts::PI / 180.0 ,
   |

warning: unused import: `std::collections::HashMap`
 --> src\forensic.rs:9:5
  |
9 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `OpenOptions` and `create_dir_all`
  --> src\forensic.rs:10:21
   |
10 | use std::fs::{File, OpenOptions, create_dir_all};
   |                     ^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `BufWriter`
  --> src\forensic.rs:11:15
   |
11 | use std::io::{BufWriter, Write};
   |               ^^^^^^^^^

warning: unused import: `Path`
  --> src\forensic.rs:12:17
   |
12 | use std::path::{Path, PathBuf};
   |                 ^^^^

warning: unused imports: `DateTime` and `Utc`
 --> src\knowledge_graph\cognee_schema.rs:1:14
  |
1 | use chrono::{DateTime, Utc};
  |              ^^^^^^^^  ^^^

warning: unused import: `FieldParticleGPU`
  --> src\ml\batch_accumulation.rs:15:50
   |
15 | use super::field_particle::{FieldParticleBuffer, FieldParticleGPU, HitListAccumulator};
   |                                                  ^^^^^^^^^^^^^^^^

warning: unused import: `std::error::Error`
 --> src\ml\event_corpus.rs:5:5
  |
5 | use std::error::Error;
  |     ^^^^^^^^^^^^^^^^^

warning: unused imports: `AdamWConfig`, `AdamW`, and `Optimizer`
 --> src\ml\material_learning.rs:2:19
  |
2 | use burn::optim::{AdamW, AdamWConfig, Optimizer};
  |                   ^^^^^  ^^^^^^^^^^^  ^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src\ml\material_learning.rs:5:5
  |
5 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `super::data_contracts::FieldParticle`
  --> src\ml\rt_blind_rays.rs:13:5
   |
13 | use super::data_contracts::FieldParticle;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `HitListAccumulator`
  --> src\ml\rt_blind_rays.rs:14:47
   |
14 | use super::field_particle::{FieldParticleGPU, HitListAccumulator};
   |                                               ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::f32::consts::PI`
  --> src\ml\rt_blind_rays.rs:18:5
   |
18 | use std::f32::consts::PI;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Buffer` and `Queue`
 --> src\ml\vbuffer_render.rs:8:12
  |
8 | use wgpu::{Buffer, Device, Queue, Texture, TextureView, RenderPipeline};
  |            ^^^^^^          ^^^^^

warning: unused imports: `Device` and `Queue`
 --> src\ml\visibility_culling.rs:9:20
  |
9 | use wgpu::{Buffer, Device, Queue};
  |                    ^^^^^^  ^^^^^

warning: unused import: `std::mem`
  --> src\ml\visibility_culling.rs:10:5
   |
10 | use std::mem;
   |     ^^^^^^^^

warning: unused import: `burn::backend::Wgpu`
 --> src\ml\wav2vec2_loader.rs:1:5
  |
1 | use burn::backend::Wgpu;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `wgpu::util::DeviceExt`
 --> src\particle_system\frustum_culler.rs:3:5
  |
3 | use wgpu::util::DeviceExt;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `wgpu::util::DeviceExt`
 --> src\particle_system\renderer.rs:4:5
  |
4 | use wgpu::util::DeviceExt;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src\ml\event_corpus.rs:42:13
   |
42 |         let mut wav2vec2 = Wav2Vec2Model::<Wgpu>::load(&device).await?;
   |             ----^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Write`
  --> src\forensic.rs:11:26
   |
11 | use std::io::{BufWriter, Write};
   |                          ^^^^^

warning: value assigned to `response` is never read
  --> src\ai\reasoning_engine.rs:33:28
   |
33 |         let mut response = String::new();
   |                            ^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `args`
  --> src\ai\query_tools.rs:34:9
   |
34 |         args: &str,
   |         ^^^^ help: if this is intentional, prefix it with an underscore: `_args`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `twister` (lib) generated 24 warnings
error: could not compile `twister` (lib) due to 1 previous error; 24 warnings emitted
